7 June 2007: Wouter
	- fixup error in double linked list insertion for subqueries and
	  for outbound list of serviced queries for iterator module.
	- nicer printout of outgoing port selection. 
	- fixup cname target readout.
	- nicer debug output.
	- fixup rrset counts when prepending CNAMEs to the answer.
	- fixup rrset TTL for prepended CNAMEs.
	- process better check for looping modules, and which submodule to
	  run next.
	- subreq insertion code fixup for slumber list.
	- VERB_DETAIL, verbosity: 2 level gives short but readable output.
	  VERB_ALGO, verbosity: 3 gives extensive output.
	- fixup RA bit in cached replies.
	- fixup CNAME responses from the cache no longer partial response.
	- error in network send handled without leakage.
	- enable ip6 from config, and try ip6 addresses if available,
	  if ip6 is not connected, skips to next server.

5 June 2007: Wouter
	- iterator state finished.
	- subrequests without parent store in cache and stop.
	- worker slumber list for ongoing promiscuous queries.
	- subrequest error handling.
	- priming failure returns SERVFAIL.
	- priming gives LAME result, returns SERVFAIL.
	- debug routine to print dns_msg as handled by iterator.
	- memleak in config file stubs fixup.
	- more small bugs, in scrubber, query compare no ID for lookup,
	  in dname validation for NS targets.
	- sets entry.key for new special allocs.
	- lognametypeclass can display unknown types and classes.

4 June 2007: Wouter
	- random selection of equally preferred nameserver targets.
	- reply info copy routine. Reuses existing code.
	- cache lameness in response handling.
	- do not touch qstate after worker_process_query because it may have
	  been deleted by that routine.
	- Prime response state.
	- Process target response state.
	- some memcmp changed to dname_compare for case preservation.

1 June 2007: Wouter
	- normalize incoming messages. Like unbound-java, with CNAME chain
	  checked, DNAME checked, CNAME's synthesized, glue checked.